[tool.poetry]
name = "drivematch"
version = "1.0.1"
description = "DriveMatchBot é um bot para Telegram que conecta passageiros a motoristas próximos e vice-versa. O bot facilita a interação entre usuários, permitindo que passageiros encontrem rapidamente motoristas disponíveis em sua área e motoristas recebam solicitações de corrida de passageiros próximos. Ideal para criar um serviço de caronas ou táxis de forma simples e eficiente.."

license = "MIT"
authors = ["cleiton <cleiton.leonel@gmail.com>"]

repository = "https://github.com/cleitonleonel/DriveMatchBot"
homepage = "https://drivematch.com.br"

readme = "readme.md"


[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.36.0"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
