[tool.poetry]
name = "drivematch"
version = "1.0.1"
description = "DriveMatchBot é um bot para Telegram que conecta passageiros a motoristas próximos e vice-versa. O bot facilita a interação entre usuários, permitindo que passageiros encontrem rapidamente motoristas disponíveis em sua área e motoristas recebam solicitações de corrida de passageiros próximos. Ideal para criar um serviço de caronas ou táxis de forma simples e eficiente.."

license = "MIT"
authors = ["cleiton <cleiton.leonel@gmail.com>"]

repository = "https://github.com/cleitonleonel/DriveMatchBot"
homepage = "https://drivematch.com.br"

readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.36.0"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pyfiglet = "^1.0.2"
toml = { version = "^0.10.2", python = "<3.11" }
beautifulsoup4 = "^4.13.3"
redis = "^7.4.0"
geoalchemy2 = "^0.18.4"
shapely = "^2.1.2"
geopy = "^2.4.1"
pypix = { git = "https://github.com/cleitonleonel/pypix.git" }
smartbot = {git = "https://github.com/cleitonleonel/SmartBot.git"}
mercadopago = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "autoflake (>=2.3.3,<3.0.0)"
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true
ignore-init-module-imports = true
