[project]
name = "drivematch"
version = "1.0.1"
description = "DriveMatchBot é um bot para Telegram que conecta passageiros a motoristas próximos e vice-versa."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36.0",
    "sqlalchemy>=2.0.31",
    "requests>=2.32.3",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pyfiglet>=1.0.2",
    "beautifulsoup4>=4.13.3",
    "redis>=7.4.0",
    "geoalchemy2>=0.18.4",
    "shapely>=2.1.2",
    "geopy>=2.4.1",
    "mercadopago>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pypix @ git+https://github.com/cleitonleonel/pypix.git",
    "smartbot @ git+https://github.com/cleitonleonel/SmartBot.git"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "autoflake>=2.3.3"
]

[tool.uv]
# dev-dependencies are managed via [dependency-groups]

[tool.hatch.metadata]
allow-direct-references = true

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true
ignore-init-module-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
